# typilus

./: .gitignore  pyproject.toml
exp/type_check/: annotater.py
src/: tensorize_and_train.sh
src/data_preparation/: Dockerfile
src/data_preparation/metadata/: popularLibs.txt
src/data_preparation/scripts/: prepare_data.sh  pytype.sh
src/data_preparation/scripts/graph_generator/: extract_graphs.py  graphgenerator.py
src/typilus/model/: codegraphmodel.py  graph2annotation.py  graph2hybridmetric.py  graph2metric.py  model.py  model_restore_helper.py  path2annotation.py  path2hybridmetric.py  pathbasedmodel.py  sequence2annotation.py  sequence2hybridmetric.py  sequence2metric.py  typeclassificationmodel.py  typemetriclearningmodel.py
src/typilus/model/components/: multiheadattention.py  sparsegnn.py  tokenembedder.py
src/typilus/utils/: index.py
