[tool.poetry]
authors = ["Miltiadis Allamanis <miallama@micosoft.com>"]
description = ""
name = "typilus"
packages = [
  {include = "typilus", from = "src"},
  {include = "data_preparation", from = "src"},
  {include = "type_check", from = "exp"},
]
readme = "README.md"
version = "0.1.0"

exclude = ["data_preparation/metadata"]

[tool.poetry.dependencies]
annoy = "^1.17.2"
dpu-utils = {git = "https://github.com/multidim-typeinf4py/dpu-utils", subdirectory = "python"}
python = ">=3.8,<3.12"
sentencepiece = "^0.1.99"
tensorflow = "^2.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
